# nowcoder-mcp

./: .gitignore  README.md  pyproject.toml
docs/: api-notes.md  auth-model.md  hermes-mcp-config.md  phase-2-plan.md
skills/nowcoder-job-research/: SKILL.md
src/nowcoder_mcp/: __init__.py  analysis.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  html_parse.py  models.py  rate_limit.py  server.py  utils.py
tests/: test_analysis.py  test_auth_store.py  test_client_search.py  test_current_user.py  test_detail_parsing.py  test_public_read_tools.py  test_server_tools.py
tests/fixtures/: discuss_detail_response.json  feed_detail.html  search_response.json
