[project]
name = "nowcoder-mcp"
version = "0.1.0"
description = "A read-only Nowcoder MCP server for interview and job research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
auth = ["playwright>=1.45.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[project.scripts]
nowcoder-mcp = "nowcoder_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nowcoder_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
